🕷 bugfix: code overlaps after exceeding the width (#1)
* fix: mobile code overlaps after exceeding the width

* remove yarn.loc

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -118,4 +118,7 @@
     width: 100%;
     flex-direction: column;
   }
+  .code{
+    font-size: 12px;
+  }
 }
